--- a/First3.ipynb
+++ b/First3.ipynb
@@ -6,7 +6,7 @@
       "name": "First3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODBUOLiejv4gpBGwvDt7PM",
+      "authorship_tag": "ABX9TyNVxhDrU4gdO2+IaTGnV1Hi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,7 +70,7 @@
         "id": "DFEoiNynIk4b",
         "outputId": "eb896003-69ae-4192-e01a-6d0fc7658019"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
         "id": "CfsqjX6TIlPg",
         "outputId": "a256cce1-fffd-4036-8576-f5e85833dc5b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,13 +115,82 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import cmath\n",
+        "num = 1+2j\n",
+        "num_sqrt = cmath.sqrt(num)\n",
+        "print('The square root of {0} is {1:0.3f}+{2:0.3f}j'.format(num,num_sqrt.real,num_sqrt.imag))"
       ],
       "metadata": {
-        "id": "emua2mk_LIr7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "emua2mk_LIr7",
+        "outputId": "ff60022e-c91e-4e8e-c57c-013f9e04ad86"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The square root of (1+2j) is 1.272+0.786j\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b,c = 11,12,13\n",
+        "s= (a+b+c)/2\n",
+        "area= (s*(s-a)*(s-b)*(s-c)) ** 0.5\n",
+        "print('The area of the triangle is %0.2f' %area)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_gwtROu9OXu0",
+        "outputId": "b3014196-779c-46a7-bd20-bf5e7a924b28"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The area of the triangle is 61.48\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = b = c ='same'\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W969Xt9iPHnB",
+        "outputId": "045ba8c6-ced3-4b97-923e-efda0a12d520"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "same\n",
+            "same\n",
+            "same\n"
+          ]
+        }
+      ]
     }
   ]
 }
