--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJHWMWMP0lr2+BqGK5ohAf",
+      "authorship_tag": "ABX9TyPXOkajpTUY/OZfEfA/sFjL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,6 +195,53 @@
     {
       "cell_type": "code",
       "source": [
+        "x=(1==True)\n",
+        "y=(1==False)\n",
+        "a=True+4\n",
+        "b=False+10\n",
+        "print(\"x is\",x)\n",
+        "print(\"y is\",y)\n",
+        "print(\"a:\",a)\n",
+        "print(\"b:\",b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o2Ss4v2Y4Lx3",
+        "outputId": "e6407b1d-9138-48f4-ce3e-2aec4e09a94f"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x is True\n",
+            "y is False\n",
+            "a: 5\n",
+            "b: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "website=\"aasifzakir.com\"\n",
+        "print(website)\n",
+        "website=\"aasifzakir/portfolio.github.io\"\n",
+        "print(website)"
+      ],
+      "metadata": {
+        "id": "wgNj8TTg8EsT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def maxOfTwo(x, y):\n",
         "  if x > y:\n",
         "    return x\n",
@@ -210,7 +257,7 @@
         "id": "MTNhi6Q6RA3Y",
         "outputId": "5c320ecd-449d-47c8-a4b3-456de7f1d5dd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +285,7 @@
         "id": "ddcRau2-TfjL",
         "outputId": "d59e807c-aa95-44ee-a82b-90521fd989da"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +313,7 @@
         "id": "bkPWKdQ3VetV",
         "outputId": "3799d2f9-c7da-4b2d-a12b-75f52ef1792c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,13 +344,558 @@
         "id": "9BRsaxw_VsZg",
         "outputId": "aed0938c-dbd1-4998-ff28-509cc82aecdb"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "rikazfisaA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def factorial(n):\n",
+        "    if n == 0:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return n * factorial(n-1)\n",
+        "n=int(input(\"Enter a number to compute the factiorial : \"))\n",
+        "print(factorial(n))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NrUcCFFxzAUP",
+        "outputId": "c178e1a8-7c62-490e-812c-762e80858d28"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number to compute the factiorial : 50\n",
+            "30414093201713378043612608166064768844377641568960512000000000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test_range(n):\n",
+        "    if n in range(11,20):\n",
+        "        print( \" %s is in the range\"%str(n))\n",
+        "    else :\n",
+        "        print(\"The number is outside the given range.\")\n",
+        "test_range(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V0zm56wlz1Sw",
+        "outputId": "d5e6219a-d42b-4e95-90cb-400ad039d05a"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number is outside the given range.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def string_test(s):\n",
+        "    d={\"upperCase\":0, \"lowerCase\":0}\n",
+        "    for c in s:\n",
+        "        if c.isupper():\n",
+        "           d[\"upperCase\"]+=1\n",
+        "        elif c.islower():\n",
+        "           d[\"lowerCase\"]+=1\n",
+        "        else:\n",
+        "           pass\n",
+        "    print (\"Original String : \", s)\n",
+        "    print (\"No. of Upper case characters : \", d[\"upperCase\"])\n",
+        "    print (\"No. of Lower case Characters : \", d[\"lowerCase\"])\n",
+        "\n",
+        "string_test('We Are Software Developers')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_uYBBdG4z1pH",
+        "outputId": "87fc5140-5d0e-4bff-8996-811d139aef65"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original String :  We Are Software Developers\n",
+            "No. of Upper case characters :  4\n",
+            "No. of Lower case Characters :  19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def uniqueList(l):\n",
+        "  x = []\n",
+        "  for a in l:\n",
+        "    if a not in x:\n",
+        "      x.append(a)\n",
+        "  return x\n",
+        "\n",
+        "print(uniqueList([1,2,3,3,3,3,4,5])) \n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "569gDiu-z10m",
+        "outputId": "3770f68f-daea-49ff-b3d1-0b9eecd95fbb"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def testPrime(n):\n",
+        "    if (n==1):\n",
+        "        return False;\n",
+        "    elif (n==2):\n",
+        "        return True;\n",
+        "    else:\n",
+        "        for x in range(2,n):\n",
+        "            if(n % x==0):\n",
+        "                return False;\n",
+        "        return True;             \n",
+        "print(testPrime(23));\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cSikUZKu1YeB",
+        "outputId": "411e3679-0ba5-4805-92a1-e3d74552414a"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def isEvenNum(l):\n",
+        "    enum = []\n",
+        "    for n in l:\n",
+        "        if n % 2 == 0:\n",
+        "            enum.append(n)\n",
+        "    return enum\n",
+        "print(isEvenNum([1, 2, 3, 4, 5, 6, 7, 8, 9]))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OMe0oQbG1Yjk",
+        "outputId": "edcef02d-fc3a-40be-bde2-2f4890de74ed"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def perfectNumber(n):\n",
+        "    sum = 0\n",
+        "    for x in range(1, n):\n",
+        "        if n % x == 0:\n",
+        "            sum += x\n",
+        "    return sum == n\n",
+        "print(perfectNumber(6))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cLah4znU1Yqg",
+        "outputId": "99dd84b1-a367-45b9-b46a-54f56dabb11d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def isPalindrome(string):\n",
+        "\tleft_pos = 0\n",
+        "\tright_pos = len(string) - 1\n",
+        "\t\n",
+        "\twhile right_pos >= left_pos:\n",
+        "\t\tif not string[left_pos] == string[right_pos]:\n",
+        "\t\t\treturn False\n",
+        "\t\tleft_pos += 1\n",
+        "\t\tright_pos -= 1\n",
+        "\treturn True\n",
+        "print(isPalindrome('aza'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ESZWZj2X3DLh",
+        "outputId": "2c9bcc51-09db-44df-ceae-959e08221f0d"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pascalTriangle(n):\n",
+        "   trow = [1]\n",
+        "   y = [0]\n",
+        "   for x in range(max(n,0)):\n",
+        "      print(trow)\n",
+        "      trow=[l+r for l,r in zip(trow+y, y+trow)]\n",
+        "   return n>=1\n",
+        "pascalTriangle(6) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ga5hIGxF3DPn",
+        "outputId": "7a73b0bb-ea99-4312-bea4-a2b228f2c781"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1]\n",
+            "[1, 1]\n",
+            "[1, 2, 1]\n",
+            "[1, 3, 3, 1]\n",
+            "[1, 4, 6, 4, 1]\n",
+            "[1, 5, 10, 10, 5, 1]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string, sys\n",
+        "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
+        "    alphaset = set(alphabet)\n",
+        "    return alphaset <= set(str1.lower())\n",
+        " \n",
+        "print ( ispangram('The quick brown fox jumps over the lazy dog'));"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U3ePiiJL3DSK",
+        "outputId": "c91b84a5-6eb0-47a5-9b88-14b7cb659dfb"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "items=[n for n in input().split('-')]\n",
+        "items.sort()\n",
+        "print('-'.join(items))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "81w7OfQ63DVC",
+        "outputId": "997f9674-15f4-4a8d-f512-8b72116af8a1"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Its-Me-How-Are-You\n",
+            "Are-How-Its-Me-You\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def printValues():\n",
+        "\tl = list()\n",
+        "\tfor i in range(1,21):\n",
+        "\t\tl.append(i**2)\n",
+        "\tprint(l)\n",
+        "\t\t\n",
+        "printValues()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mm5REfnu3DXF",
+        "outputId": "c664db5a-c839-42fe-cbea-d02f363dd324"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_bold(fn):\n",
+        "    def wrapped():\n",
+        "        return \"<b>\" + fn() + \"</b>\"\n",
+        "    return wrapped\n",
+        "\n",
+        "def make_italic(fn):\n",
+        "    def wrapped():\n",
+        "        return \"<i>\" + fn() + \"</i>\"\n",
+        "    return wrapped\n",
+        "\n",
+        "def make_underline(fn):\n",
+        "    def wrapped():\n",
+        "        return \"<u>\" + fn() + \"</u>\"\n",
+        "    return wrapped\n",
+        "@make_bold\n",
+        "@make_italic\n",
+        "@make_underline\n",
+        "def hello():\n",
+        "    return \"hello world\"\n",
+        "print(hello())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_DprPsVr3DZH",
+        "outputId": "dd275b01-43f6-4798-bbb5-f56612b77749"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<b><i><u>hello world</u></i></b>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "myCode = 'print(\"hello world\")'\n",
+        "code = \"\"\"\n",
+        "def mutiply(x,y):\n",
+        "    return x*y\n",
+        "\n",
+        "print('Multiply of 2 and 3 is: ',mutiply(2,3))\n",
+        "\"\"\"\n",
+        "exec(myCode)\n",
+        "exec(code)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gRxouyGy3Db7",
+        "outputId": "2535707b-85fb-43c8-f82e-901bbe8e16d0"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n",
+            "Multiply of 2 and 3 is:  6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def test(a):\n",
+        "        def add(b):\n",
+        "                nonlocal a\n",
+        "                a += 1\n",
+        "                return a+b\n",
+        "        return add\n",
+        "func= test(4)\n",
+        "print(func(4))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YwMfwoWT7FXC",
+        "outputId": "4040f9fc-9d06-4721-df64-6a45b35b7f57"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def abc():\n",
+        "    x = 1\n",
+        "    y = 2\n",
+        "    str1= \"w3resource\"\n",
+        "    print(\"Python Exercises\")\n",
+        "\n",
+        "print(abc.__code__.co_nlocals)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M_Oklr6j7Yd-",
+        "outputId": "9d21f25b-9b41-44fa-ba04-378b9283efdf"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from time import sleep\n",
+        "import math\n",
+        "def delay(fn, ms, *args):\n",
+        "  sleep(ms / 1000)\n",
+        "  return fn(*args)\n",
+        "print(\"Square root after specific miliseconds:\") \n",
+        "print(delay(lambda x: math.sqrt(x), 100, 16))\n",
+        "print(delay(lambda x: math.sqrt(x), 1000, 100))\n",
+        "print(delay(lambda x: math.sqrt(x), 2000, 25100))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dq6SOwxd7Ywd",
+        "outputId": "94c473b1-f21d-4d4e-e48b-78f0b14a204b"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Square root after specific miliseconds:\n",
+            "4.0\n",
+            "10.0\n",
+            "158.42979517754858\n"
           ]
         }
       ]
