--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXOkajpTUY/OZfEfA/sFjL",
+      "authorship_tag": "ABX9TyN8/2U2f4NB+GilezhD4CEd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,7 +211,7 @@
         "id": "o2Ss4v2Y4Lx3",
         "outputId": "e6407b1d-9138-48f4-ce3e-2aec4e09a94f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,7 @@
         "id": "NrUcCFFxzAUP",
         "outputId": "c178e1a8-7c62-490e-812c-762e80858d28"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "id": "V0zm56wlz1Sw",
         "outputId": "d5e6219a-d42b-4e95-90cb-400ad039d05a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +438,7 @@
         "id": "_uYBBdG4z1pH",
         "outputId": "87fc5140-5d0e-4bff-8996-811d139aef65"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,7 +470,7 @@
         "id": "569gDiu-z10m",
         "outputId": "3770f68f-daea-49ff-b3d1-0b9eecd95fbb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +503,7 @@
         "id": "cSikUZKu1YeB",
         "outputId": "411e3679-0ba5-4805-92a1-e3d74552414a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
         "id": "OMe0oQbG1Yjk",
         "outputId": "edcef02d-fc3a-40be-bde2-2f4890de74ed"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +561,7 @@
         "id": "cLah4znU1Yqg",
         "outputId": "99dd84b1-a367-45b9-b46a-54f56dabb11d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +594,7 @@
         "id": "ESZWZj2X3DLh",
         "outputId": "2c9bcc51-09db-44df-ceae-959e08221f0d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,7 +624,7 @@
         "id": "Ga5hIGxF3DPn",
         "outputId": "7a73b0bb-ea99-4312-bea4-a2b228f2c781"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,7 +667,7 @@
         "id": "U3ePiiJL3DSK",
         "outputId": "c91b84a5-6eb0-47a5-9b88-14b7cb659dfb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +692,7 @@
         "id": "81w7OfQ63DVC",
         "outputId": "997f9674-15f4-4a8d-f512-8b72116af8a1"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +722,7 @@
         "id": "Mm5REfnu3DXF",
         "outputId": "c664db5a-c839-42fe-cbea-d02f363dd324"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -764,7 +764,7 @@
         "id": "_DprPsVr3DZH",
         "outputId": "dd275b01-43f6-4798-bbb5-f56612b77749"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,7 +795,7 @@
         "id": "gRxouyGy3Db7",
         "outputId": "2535707b-85fb-43c8-f82e-901bbe8e16d0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +826,7 @@
         "id": "YwMfwoWT7FXC",
         "outputId": "4040f9fc-9d06-4721-df64-6a45b35b7f57"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -855,7 +855,7 @@
         "id": "M_Oklr6j7Yd-",
         "outputId": "9d21f25b-9b41-44fa-ba04-378b9283efdf"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -886,7 +886,7 @@
         "id": "dq6SOwxd7Ywd",
         "outputId": "94c473b1-f21d-4d4e-e48b-78f0b14a204b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,6 +896,70 @@
             "4.0\n",
             "10.0\n",
             "158.42979517754858\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Choice 1: Add, 2: Subraction, 3: Division, 4: Multiplication, 5: Quit\")\n",
+        "n1 = input(\"Enter the choice of Operation :\")\n",
+        "n = int(n1)\n",
+        "if (n == 1):\n",
+        "  print(\"You have chosen addition Option....\")\n",
+        "  a1 = input(\"Enter the value for A :\")\n",
+        "  b1 = input(\"Enter the value for B :\")\n",
+        "  a = int(a1)\n",
+        "  b = int(b1)\n",
+        "  c = a + b\n",
+        "  print(\"The Result of \",a,\" + \",b,\" is \",c)\n",
+        "elif (n == 2):\n",
+        "  print(\"You have chosen subraction Option....\")\n",
+        "  a1 = input(\"Enter the value for A :\")\n",
+        "  b1 = input(\"Enter the value for B :\")\n",
+        "  a = int(a1)\n",
+        "  b = int(b1)\n",
+        "  c = a - b\n",
+        "  print(\"The Result of \",a,\" - \",b,\" is \",c)\n",
+        "elif (n == 3):\n",
+        "  print(\"You have chosen division Option....\")\n",
+        "  a1 = input(\"Enter the value for A :\")\n",
+        "  b1 = input(\"Enter the value for B :\")\n",
+        "  a = int(a1)\n",
+        "  b = int(b1)\n",
+        "  c = a * b\n",
+        "  print(\"The Result of \",a,\" / \",b,\" is \",c)\n",
+        "elif (n == 4):\n",
+        "  print(\"You have chosen multiplication Option....\")\n",
+        "  a1 = input(\"Enter the value for A :\")\n",
+        "  b1 = input(\"Enter the value for B :\")\n",
+        "  a = int(a1)\n",
+        "  b = int(b1)\n",
+        "  c = a / b\n",
+        "  print(\"The Result of \",a,\" * \",b,\" is \",c)\n",
+        "elif (n == 5):\n",
+        "  print(\"Exited\")\n",
+        "  exit()\n",
+        "else:\n",
+        "  print(\"You have entered a wrong number\")"
+      ],
+      "metadata": {
+        "id": "u56v5weW-X2J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b6df88c-1099-41b8-a2ad-a1299cc8a9d5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Choice 1: Add, 2: Subraction, 3: Division, 4: Multiplication, 5: Quit\n",
+            "Enter the choice of Operation :6\n",
+            "You have entered a wrong number\n"
           ]
         }
       ]
