--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN8/2U2f4NB+GilezhD4CEd",
+      "authorship_tag": "ABX9TyP69vbyw+Jf+5i6JvvwYLZw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -963,6 +963,176 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#boolean expression\n",
+        "a=True\n",
+        "b=False\n",
+        "print('a= ',a,'b= ',b)\n",
+        "a=False;\n",
+        "print('a= ',a,'b= ',b)"
+      ],
+      "metadata": {
+        "id": "lmPlKlf1fa1A",
+        "outputId": "cb0cecf7-86c9-44c3-cbf1-f8b3e2dbdb70",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a=  True b=  False\n",
+            "a=  False b=  False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get two integers from the user\n",
+        "dividend, divisor = eval(input('Please enter two to divide: '))\n",
+        "# If possible, divide them and print the result\n",
+        "if divisor != 0:\n",
+        "  print(dividend,'/',divisor,' = ', dividend/divisor)\n",
+        "else:\n",
+        "  print('Divsion by is not allowed.')"
+      ],
+      "metadata": {
+        "id": "drGGgsiIgKxn",
+        "outputId": "b0e4b3c0-9050-47d1-ccc7-ef7cefc09bb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter two to divide: 22,2\n",
+            "22 / 2  =  11.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#nested loop\n",
+        "print(\"     1  2  3  4  5  6  7  8  9  10\")\n",
+        "print(\"    <---------------------------->\")\n",
+        "for row in range(1,11):\n",
+        "  if row<10:\n",
+        "    print(\" \",end=\" \")\n",
+        "    for column in range(1,11):\n",
+        "      product=row*column;\n",
+        "      if product<100:\n",
+        "        print(end=\" \")\n",
+        "      if product<10:\n",
+        "        print(end=\" \")\n",
+        "      print(product,end=\" \")\n",
+        "    print()"
+      ],
+      "metadata": {
+        "id": "RREccTRjfa30",
+        "outputId": "bf31f70b-09f2-4682-808f-3029dc88899a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "     1  2  3  4  5  6  7  8  9  10\n",
+            "    <---------------------------->\n",
+            "    1   2   3   4   5   6   7   8   9  10 \n",
+            "    2   4   6   8  10  12  14  16  18  20 \n",
+            "    3   6   9  12  15  18  21  24  27  30 \n",
+            "    4   8  12  16  20  24  28  32  36  40 \n",
+            "    5  10  15  20  25  30  35  40  45  50 \n",
+            "    6  12  18  24  30  36  42  48  54  60 \n",
+            "    7  14  21  28  35  42  49  56  63  70 \n",
+            "    8  16  24  32  40  48  56  64  72  80 \n",
+            "    9  18  27  36  45  54  63  72  81  90 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#while \n",
+        "entry=0\n",
+        "sum=0\n",
+        "print(\"Enter numbers to sum, negative number ends list: \")\n",
+        "while entry >=0:\n",
+        "  entry =eval(input())\n",
+        "  if entry >=0:\n",
+        "    sum+=entry\n",
+        "print(\"sum=\",sum)"
+      ],
+      "metadata": {
+        "id": "21Q_ZkkMfa8v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#elif statement\n",
+        "value=eval(input(\"Please enter an integer in the range 0....5: \"))\n",
+        "if value<0:\n",
+        "  print(\"To0o small\")\n",
+        "else:\n",
+        "  if value ==0:\n",
+        "    print(\"zero\")\n",
+        "  else:\n",
+        "    if value==1:\n",
+        "      print(\"one\")\n",
+        "    else:\n",
+        "      if value ==2:\n",
+        "        print(\"two\")\n",
+        "      else:\n",
+        "        if value==3:\n",
+        "          print(\"three\")\n",
+        "        else:\n",
+        "          if value==4:\n",
+        "            print(\"four\")\n",
+        "          else:\n",
+        "            if value==5:\n",
+        "              print(\"five\")\n",
+        "            else:\n",
+        "              print(\"too large\")\n",
+        "  print(\"done\")"
+      ],
+      "metadata": {
+        "id": "IEphN6dPfbIK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "XoT7dm-rfbQS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
