--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -975,11 +975,11 @@
         "print('a= ',a,'b= ',b)"
       ],
       "metadata": {
-        "id": "lmPlKlf1fa1A",
-        "outputId": "cb0cecf7-86c9-44c3-cbf1-f8b3e2dbdb70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lmPlKlf1fa1A",
+        "outputId": "cb0cecf7-86c9-44c3-cbf1-f8b3e2dbdb70"
       },
       "execution_count": 1,
       "outputs": [
@@ -1005,11 +1005,11 @@
         "  print('Divsion by is not allowed.')"
       ],
       "metadata": {
-        "id": "drGGgsiIgKxn",
-        "outputId": "b0e4b3c0-9050-47d1-ccc7-ef7cefc09bb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "drGGgsiIgKxn",
+        "outputId": "b0e4b3c0-9050-47d1-ccc7-ef7cefc09bb1"
       },
       "execution_count": 4,
       "outputs": [
@@ -1042,11 +1042,11 @@
         "    print()"
       ],
       "metadata": {
-        "id": "RREccTRjfa30",
-        "outputId": "bf31f70b-09f2-4682-808f-3029dc88899a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RREccTRjfa30",
+        "outputId": "bf31f70b-09f2-4682-808f-3029dc88899a"
       },
       "execution_count": 2,
       "outputs": [
@@ -1083,10 +1083,26 @@
         "print(\"sum=\",sum)"
       ],
       "metadata": {
-        "id": "21Q_ZkkMfa8v"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "21Q_ZkkMfa8v",
+        "outputId": "ca096c15-bb5b-4a2d-e5af-0686487dfe94"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter numbers to sum, negative number ends list: \n",
+            "6\n",
+            "7\n",
+            "-2\n",
+            "sum= 13\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1118,10 +1134,24 @@
         "  print(\"done\")"
       ],
       "metadata": {
-        "id": "IEphN6dPfbIK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IEphN6dPfbIK",
+        "outputId": "25d61832-b1fa-42a1-ff3e-70df9bbaaa3e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter an integer in the range 0....5: 4\n",
+            "four\n",
+            "done\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
