--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP69vbyw+Jf+5i6JvvwYLZw",
+      "authorship_tag": "ABX9TyNJuxKmS9c+MC94sHp6e+uE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -981,7 +981,7 @@
         "id": "lmPlKlf1fa1A",
         "outputId": "cb0cecf7-86c9-44c3-cbf1-f8b3e2dbdb70"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1011,7 +1011,7 @@
         "id": "drGGgsiIgKxn",
         "outputId": "b0e4b3c0-9050-47d1-ccc7-ef7cefc09bb1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,7 +1048,7 @@
         "id": "RREccTRjfa30",
         "outputId": "bf31f70b-09f2-4682-808f-3029dc88899a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,7 +1089,7 @@
         "id": "21Q_ZkkMfa8v",
         "outputId": "ca096c15-bb5b-4a2d-e5af-0686487dfe94"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1140,7 @@
         "id": "IEphN6dPfbIK",
         "outputId": "25d61832-b1fa-42a1-ff3e-70df9bbaaa3e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,10 +1156,155 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Declare a variable\n",
+        "Number=25\n",
+        "Name=\"Kiran\"\n",
+        "B=3.5\n",
+        "print(Number)\n",
+        "print(Name)\n",
+        "print(B)"
       ],
       "metadata": {
-        "id": "XoT7dm-rfbQS"
+        "id": "XoT7dm-rfbQS",
+        "outputId": "0973de3d-da01-4a1b-de07-7838ca0d0642",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n",
+            "Kiran\n",
+            "3.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Redeclare a variable\n",
+        "Name=\"Python\"\n",
+        "print(Name)"
+      ],
+      "metadata": {
+        "id": "Z2zHIjEc4p7w",
+        "outputId": "f613584e-aec3-4fb0-9e2e-e634cd8811e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Multiple assignment\n",
+        "x=y=z=\"SoftwareTestingHelp\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)\n",
+        "a,b,c=5,3.2,\"Hello\"\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "keWvbPL643Ud",
+        "outputId": "fa3295c6-d88b-452e-f699-fd5c34b8bd90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SoftwareTestingHelp\n",
+            "SoftwareTestingHelp\n",
+            "SoftwareTestingHelp\n",
+            "5\n",
+            "3.2\n",
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Numbers\n",
+        "a=5\n",
+        "print(a,\"is of type\",type(a))\n"
+      ],
+      "metadata": {
+        "id": "N9hrA_s05Db3",
+        "outputId": "5041c299-fdb5-4ca7-a7b7-97b8e2872e2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 is of type <class 'int'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#String\n",
+        "String1=\"Welcome\"\n",
+        "String2=\"To python\"\n",
+        "print(String1+String2)"
+      ],
+      "metadata": {
+        "id": "Bco8U0gb9YGc",
+        "outputId": "0a700e65-9c05-441c-ffba-02d21e89334f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WelcomeTo python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#List\n",
+        "List=[2,4,5,5,\"Hi\"]\n",
+        "print(\"List[2]\",List[2])"
+      ],
+      "metadata": {
+        "id": "3j9IknmD-BpZ"
       },
       "execution_count": null,
       "outputs": []
