--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJuxKmS9c+MC94sHp6e+uE",
+      "authorship_tag": "ABX9TyO9CgL/qLboK3svL7Oi/1Hy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1171,7 +1171,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1198,7 +1198,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1229,7 +1229,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1259,7 +1259,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1276,22 +1276,25 @@
         "#String\n",
         "String1=\"Welcome\"\n",
         "String2=\"To python\"\n",
-        "print(String1+String2)"
+        "print(String1+String2)\n",
+        "#slicing\n",
+        "print(String1[2:5])"
       ],
       "metadata": {
         "id": "Bco8U0gb9YGc",
-        "outputId": "0a700e65-9c05-441c-ffba-02d21e89334f",
+        "outputId": "13bf62f3-3e3f-4aa6-9987-3d36640bcfc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WelcomeTo python\n"
+            "WelcomeTo python\n",
+            "lco\n"
           ]
         }
       ]
@@ -1304,7 +1307,413 @@
         "print(\"List[2]\",List[2])"
       ],
       "metadata": {
-        "id": "3j9IknmD-BpZ"
+        "id": "3j9IknmD-BpZ",
+        "outputId": "5f863bbf-dc25-4fd7-eb0a-fea2cbb6c58a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "List[2] 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Tuple\n",
+        "Tuple=(50,15,25.6,\"Python\")\n",
+        "print(\"Tuple[1]=\",Tuple[1])"
+      ],
+      "metadata": {
+        "id": "ozp-3Npwb1va",
+        "outputId": "b824acc7-569a-4ab3-a3ff-cee73e9d8fcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tuple[1]= 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Set\n",
+        "Set={5,1,2.6,\"python\"}\n",
+        "print(Set)"
+      ],
+      "metadata": {
+        "id": "y7rvp_pQcS8-",
+        "outputId": "8dc297a1-923a-4af0-f10c-260d68a2f702",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'python', 1, 2.6, 5}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Dictionary\n",
+        "Dict={1:'Hi',2:7.5,3:'Class'}\n",
+        "print(Dict)"
+      ],
+      "metadata": {
+        "id": "rHsjteQocb5f",
+        "outputId": "dc94e75a-10e8-4932-f424-ccdb739461cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 'Hi', 2: 7.5, 3: 'Class'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Arithmetic operators\n",
+        "x=15\n",
+        "y=10\n",
+        "print('x+y=',x+y)\n",
+        "print('x-y=',x-y)\n",
+        "print('x*y=',x*y)\n",
+        "print('x/y=',x/y)\n",
+        "print('x//y=',x//y)"
+      ],
+      "metadata": {
+        "id": "FNaZKvR_c9u6",
+        "outputId": "46519ba8-7781-4b33-9d9d-15c2810713b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x+y= 25\n",
+            "x-y= 5\n",
+            "x*y= 150\n",
+            "x/y= 1.5\n",
+            "x//y= 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#comparison Operators\n",
+        "x=8\n",
+        "y=15\n",
+        "print('x>y is',x>y)\n",
+        "print('x<y is',x<y)\n",
+        "print('x==y is',x==y)\n",
+        "print('x!=y is',x!=y)\n",
+        "print('x>=y is',x>=y)\n",
+        "print('x<=y is',x<=y)\n"
+      ],
+      "metadata": {
+        "id": "ahqWg-WEe3NC",
+        "outputId": "dad0e700-5ece-46e0-e67e-b31c0619f269",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x>y is False\n",
+            "x<y is True\n",
+            "x==y is False\n",
+            "x!=y is True\n",
+            "x>=y is False\n",
+            "x<=y is True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#logical operators\n",
+        "a=True\n",
+        "b=False\n",
+        "print('a and b is',a and b)\n",
+        "print('a or b is',a and b)\n",
+        "print('a not b is',a and b)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "a1N94jGUfZza",
+        "outputId": "dc4939be-4754-42fc-e3c1-0488bcf0e4c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a and b is False\n",
+            "a or b is False\n",
+            "a not b is False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#identity operator\n",
+        "a1=3\n",
+        "b1=3\n",
+        "a2=\"Python\"\n",
+        "b2=\"Python\"\n",
+        "a3=[4,5,6]\n",
+        "b3=[4,5,6]\n",
+        "print(a1 is not b1)\n",
+        "print(a2 is b2)\n",
+        "print(a3 is b3)"
+      ],
+      "metadata": {
+        "id": "A-ASxT73fstA",
+        "outputId": "3e5fdfbb-fcb8-4100-e7bb-1aec7ea9589c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Membership operator\n",
+        "a=\"Python operators\"\n",
+        "b={1:'x',2:'y'}\n",
+        "print(\"P\" in a)\n",
+        "print(1 in b)\n",
+        "print('y' in b)"
+      ],
+      "metadata": {
+        "id": "Xx1g1DkkgHIy",
+        "outputId": "79381d25-0e59-440e-ef95-2a3eb8e8e8c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#if statement\n",
+        "num=5\n",
+        "if( num<10):\n",
+        "  print(\"Num is smaller than 10\")"
+      ],
+      "metadata": {
+        "id": "kswp_qZYgX8b",
+        "outputId": "cb98bc38-a83f-4d5a-bbb9-bcdaef278ae9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num is smaller than 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#if-else statement\n",
+        "num=5\n",
+        "if(num>10):\n",
+        "  print(\"number is greater than 10\")\n",
+        "else:\n",
+        "  print(\"number is less than 10\")"
+      ],
+      "metadata": {
+        "id": "K1ix7nYLgkFZ",
+        "outputId": "f7544272-e03f-4ba1-b52f-53c1713b2a82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number is less than 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#elif statements\n",
+        "num=10\n",
+        "if(num==0):\n",
+        "  print(\"Number is Zero\")\n",
+        "elif(num>5):\n",
+        "  print(\"Number is greater than 5\")\n",
+        "else:\n",
+        "  print(\"Number is smaller than 5\")"
+      ],
+      "metadata": {
+        "id": "Vb5tLPyEgkG6",
+        "outputId": "ce1aaad3-1964-4c0a-93f3-78361ec24dea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number is greater than 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#nested if-else statements\n",
+        "num=5\n",
+        "if(num>0):\n",
+        "  print(\"number is positive\")\n",
+        "if(num<10):\n",
+        "  print(\"number is less than 10\")"
+      ],
+      "metadata": {
+        "id": "N6JlGxpghF2E",
+        "outputId": "47b935d5-e020-4e06-c147-a17bf36e96ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number is positive\n",
+            "number is less than 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#elif ladder\n",
+        "my_marks=90\n",
+        "if(my_marks<35):\n",
+        "  print(\"Sorry!,You failed the exam\")\n",
+        "elif(my_marks>60 and my_marks>100):\n",
+        "  print(\"Passed in First class\")\n",
+        "else:\n",
+        "  print(\"Passed in First class\")"
+      ],
+      "metadata": {
+        "id": "_JlQeQyKhi7R",
+        "outputId": "d54fe542-4166-45e4-9ff2-c55e8efb2330",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Passed in First class\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "yHxnxJFyjBFq"
       },
       "execution_count": null,
       "outputs": []
