--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNlHihRVWVBgC+qmqLs5lb6",
+      "authorship_tag": "ABX9TyP7USUQR4T1ZQLOMi8lkQsn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1773,7 +1773,7 @@
           "height": 907
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1836,6 +1836,36 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Palindrome\n",
+        "string=input((\"Enter a letter:\"))\n",
+        "if(string==string[::-1]): \n",
+        "  #[::-1] means reversing anything like string, list,any iterable\n",
+        "      print(\"The letter is a palindrome\")  \n",
+        "else:  \n",
+        "      print(\"The letter is not a palindrome\")"
+      ],
+      "metadata": {
+        "id": "oTqfOrQwoOvm",
+        "outputId": "80bf37be-0022-47f3-9af1-6db927770370",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a letter:AasifisaA\n",
+            "The letter is a palindrome\n"
+          ]
         }
       ]
     }
