--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP7USUQR4T1ZQLOMi8lkQsn",
+      "authorship_tag": "ABX9TyMC4I+0yAEkzndFoSMaHO4Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1843,28 +1843,58 @@
       "cell_type": "code",
       "source": [
         "#Palindrome\n",
-        "string=input((\"Enter a letter:\"))\n",
-        "if(string==string[::-1]): \n",
-        "  #[::-1] means reversing anything like string, list,any iterable\n",
-        "      print(\"The letter is a palindrome\")  \n",
+        "string=input((\"Enter a string:\"))\n",
+        "if(string==string[::-1]):\n",
+        "      print(\"The letter is a palindrome\")\n",
         "else:  \n",
         "      print(\"The letter is not a palindrome\")"
       ],
       "metadata": {
-        "id": "oTqfOrQwoOvm",
-        "outputId": "80bf37be-0022-47f3-9af1-6db927770370",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oTqfOrQwoOvm",
+        "outputId": "dfcac878-6c9c-4907-b014-e6fce0baadc8"
       },
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a letter:AasifisaA\n",
+            "Enter a string:malayalam\n",
             "The letter is a palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter a number: \"))\n",
+        "if num > 1:\n",
+        " for i in range(2, num//2):\n",
+        "  if (num % i) == 0:\n",
+        "   print(num, \"is not a prime number\")\n",
+        "   break\n",
+        "  else:\n",
+        "   print(num, \"is a prime number\")"
+      ],
+      "metadata": {
+        "id": "4zG6uM-usjKD",
+        "outputId": "7faeefdb-7e32-4c4f-b260-ad5a4f079a80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 6\n",
+            "6 is not a prime number\n"
           ]
         }
       ]
