--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -6,7 +6,7 @@
       "name": "Day1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMC4I+0yAEkzndFoSMaHO4Z",
+      "authorship_tag": "ABX9TyNUk5CN4bsbnZOHoFQNBl46",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1856,7 +1856,7 @@
         "id": "oTqfOrQwoOvm",
         "outputId": "dfcac878-6c9c-4907-b014-e6fce0baadc8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1871,6 +1871,34 @@
     {
       "cell_type": "code",
       "source": [
+        "#Simple method to reverse a string\n",
+        "string1 = input(\"Enter a string\")\n",
+        "reversedString = string1[::-1]\n",
+        "print(reversedString)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cOe0hr1tDkc7",
+        "outputId": "b2e0b9e2-226d-4bc7-f936-3304633c6155"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a stringI am Aasif\n",
+            "fisaA ma I\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Prime number\n",
         "num = int(input(\"Enter a number: \"))\n",
         "if num > 1:\n",
         " for i in range(2, num//2):\n",
@@ -1887,7 +1915,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1895,6 +1923,101 @@
           "text": [
             "Enter a number: 6\n",
             "6 is not a prime number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reversing string\n",
+        "string = input(\"Enter a string : \")\n",
+        "string2 = ''\n",
+        "i = len(string)-1\n",
+        "while(i>=0):\n",
+        "  string2 = string2 + string[i]\n",
+        "  i-=1\n",
+        "print(\"The reversed string is\",string2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VxMlunJ0-UFg",
+        "outputId": "a7ef33ba-41e7-4132-c847-13aa94445d65"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string : Aasif\n",
+            "The reversed string is fisaA\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Fibonacci series\n",
+        "num  = int(input(\"Enter a number : \"))\n",
+        "n1, n2 = 0, 1\n",
+        "sum = 0\n",
+        "if (num<=0):\n",
+        "  print(\"Please enter a number greater than zero\")\n",
+        "else:\n",
+        "  for i in range(0, num):\n",
+        "    n1 = n2\n",
+        "    n2 = sum\n",
+        "    sum = n1 + n2\n",
+        "    print(sum, end = \" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xqngajun-URZ",
+        "outputId": "84db01b1-8cbd-434b-997b-9eff351a8d61"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number : 10\n",
+            "1 1 2 3 5 8 13 21 34 55 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#factorial\n",
+        "num = int(input(\"Enter a number: \"))\n",
+        "fact = 1\n",
+        "for i in range(1, num+1):\n",
+        "  fact=fact*i\n",
+        "print(fact)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W2h2zn_EBOCw",
+        "outputId": "c56e7dd0-e1aa-4c53-9fef-f08ee5cfcfa9"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 5\n",
+            "120\n"
           ]
         }
       ]
